--- a/CSS/style.css
+++ b/CSS/style.css
@@ -37,3 +37,16 @@
     font-style: italic;
     font-weight: bold;
 }
+
+.textCSS{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:gold;
+    letter-spacing: 2px;
+    font-weight: bold;
+    font-size: 2em;
+    word-spacing: 10px;
+    /* direction: rtl; */
+    text-indent: 120px;
+    text-align: center;
+    text-transform: capitalize;
+}
