--- a/CSS/style.css
+++ b/CSS/style.css
@@ -38,6 +38,15 @@
     font-weight: bold;
 }
 
+#fontCss1{
+    width: 100%;
+    height: 200px;
+    background-color: rgb(208, 208, 247);
+    border: 5px dashed red;
+    border-radius: 5px;
+    overflow: auto;
+}
+
 .textCSS{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:gold;
@@ -49,4 +58,20 @@
     text-indent: 120px;
     text-align: center;
     text-transform: capitalize;
+}
+
+a:link{
+    color: rgb(248, 27, 27);
+}
+
+a:hover{
+    color: rgb(15, 240, 15);
+}
+
+a:visited{
+    color: rgb(61, 41, 241);
+}
+
+a:active{
+    color: yellow;
 }
